# OpenMPCourse

./: CMakeLists.txt  README.md
src/: basic.cpp  lesson16_linked_dst.cpp  lesson5_RiemannSum.cpp
